[package]
name = "b3d2glb"
version = "0.2.1"
edition = "2024"
description = "Convert Blitz3D B3D models to glTF/GLB"
license = "GPL-3.0-only"
repository = "https://github.com/AvengerAnubis/b3d2glb"
homepage = "https://github.com/AvengerAnubis/b3d2glb"

[dependencies]
thiserror = "2"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
walkdir = "2"
